PP-5455: Fix review comments